--- a/index.html
+++ b/index.html
@@ -1,106 +1,28 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		<!-- Bootstrap requires jQuery -->
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
+<html lang="en">
+    <head>
+        <meta charset="utf-8">
+	    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-		<!-- Load some Lora -->
+		<!-- Bootstrap CSS -->
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+		<!-- Bootstrap jQuery -->
+		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+
+		<!-- Load Lora font -->
 		<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
-		<!-- Bootstrap requires jQuery -->
-		<script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
-		
-		<!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-		
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css" integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
-		
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-		
-		<link rel="stylesheet" href="style.css" />
+		<!-- Puruse style -->
+		<link rel="stylesheet" href="http://faculty.washington.edu/ajko/books/peruse/peruse.css">
 
-		<title>User Interface Software and Technology</title>
+		<!-- Peruse app -->
+		<script src="http://faculty.washington.edu/ajko/books/peruse/build/peruse.js"></script>
+
+    </head>
+	<body onload="peruse('book.json')">
 		
-	</head>
-	<body>
-
-		<img src="images/cover.jpg" class="img-responsive" />		
-		<small>Credit: Amy J. Ko</small>
-		
-		<h1>User Interface Software and Technology</h1>
-		<div class="lead"><a href="http://faculty.uw.edu/ajko">Amy J. Ko</a> <small>with contributions from <a href="http://www.ericwhitmire.com/">Eric Whitmire</a></small></div>
-
-		<table class="table">
-			<tr>
-				<td rowspan="18" width="40%">
-					<p>The HCI community has a long history of innovation in user interface software and technologies, but there are few surveys or review of all of this research. This book attempts to summarize much of this knowledge, providing a living online textbook for UX designers, researchers, and design-literate developers to learn from and leverage this ever-expanding body of knowledge.</p>
-
-					<p>I hope you enjoy! If not, please file an <a href="https://github.com/andyjko/user-interface-software-and-technology/issues/new">issue</a> on the <a href="https://github.com/andyjko/user-interface-software-and-technology/">the book's GitHub repository</a>.</p>
-				<td>Chapter 1</td><td><a href="history.html">A history of user interfaces</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 2</td><td><a href="theory.html">A theory of user interfaces</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 3</td><td><a href="mediation.html">What interfaces mediate</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 4</td><td><a href="declarative.html">Declarative interfaces</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 5</td><td><a href="interactive.html">Interactive interfaces</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 6</td><td><a href="architecture.html">Architecture</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 7</td><td><a href="accessibility.html">Accessibility</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 8</td><td><a href="pointing.html">Pointing</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 9</td><td><a href="text-entry.html">Text entry</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 10</td><td><a href="hands.html">Hand-based input</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 11</td><td><a href="body.html">Body-based input</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 12</td><td><a href="2D.html">2D visual output</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 13</td><td><a href="3D.html">3D visual output</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 14</td><td><a href="physical.html">Physical output</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 15</td><td><a href="help.html">Help</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 16</td><td><a href="ip.html">Intellectual property</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 17</td><td><a href="translation.html">Technology transfer</a></td>
-			</tr>
-			<tr>
-				<td>Chapter 18</td><td><a href="ethics.html">Ethics</a></td>
-			</tr>
-		</table>
-
-		<small>
-			<p><a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-nd/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-nd/4.0/">Creative Commons Attribution-NoDerivatives 4.0 International License</a></p>
-		
-		</small>
-
 		<script type="text/javascript">
 		
 			var _gaq = _gaq || [];
@@ -114,10 +36,6 @@
 			})();
 		
 		</script>
-
-	</body>
-
+		
+	<body>
 </html>
-
-
-
